--- a/WeCareCoachMS.properties
+++ b/WeCareCoachMS.properties
@@ -2,5 +2,7 @@
 spring.datasource.url = jdbc:mysql://localhost/wecare-coachms
 server.port = 8080
 server.servlet.context-path=/coachms
-
-
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=4
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=5000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
