--- a/WeCareUserMS.properties
+++ b/WeCareUserMS.properties
@@ -1,4 +1,7 @@
-
 spring.datasource.url = jdbc:mysql://localhost/wecare-userms
 server.port = 8090
 server.servlet.context-path=/userms
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=4
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=5000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
