--- a/WeCareBookMS.properties
+++ b/WeCareBookMS.properties
@@ -1,3 +1,4 @@
 spring.datasource.url = jdbc:mysql://localhost/wecare-bookms
 server.port = 8070
+#server.servlet.context-path=/bookms
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
