--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@ spring.datasource.username = root
 spring.datasource.password =
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
+spring.zipkin.base-url=http://localhost:4444/
